cmake_minimum_required (VERSION 3.8)

set(PROJECT_NAME HttpServer)
project(${PROJECT_NAME})

set(CMAKE_BINARY_DIR ${CMAKE_CURRENT_LIST_DIR}/build)
set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})

set(CORE_SERVER_INCL ${PROJECT_ROOT_DIR}/CoreServer) 


set(CMAKE_OUTPUT_DIRECTORY ${PROJECT_ROOT_DIR}/exe)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_OUTPUT_DIRECTORY})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_OUTPUT_DIRECTORY})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_OUTPUT_DIRECTORY})

add_subdirectory(CoreServer)
add_subdirectory(Example)

    

